--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -5,7 +5,7 @@
 {% if user.is_authenticated %}
 <section class="main_section">
             <!-- Top User Info and Time -->
-<div class="d-flex mb-1 justify-content-between align-items-center">
+<div class="d-flex mb-2 justify-content-between align-items-center">
     <div class="text-start">
         <h2 class="text-lg text-md-md text-sm-sm">
             {% if user.is_superuser %}
@@ -17,7 +17,7 @@
     </div>
     <div class="text-end">
         {% if running_records %}
-            <a href="{% url 'add_record' %}" class="btn btn-primary">Add Subject</a>
+            <a href="{% url 'add_record' %}" class="btn btn-primary rounded-pill">Add Subject</a>
         {% endif %}
     </div>
 </div>
@@ -43,16 +43,10 @@
     </div>
 </div>
 
-
-
-
-
             <!-- Currently Doing Subject -->
-            
-    
+
 
 <div class="mb-4">
-    <!-- Current -->
     {% if not running_records %}
             <div class="card card-container ">
                 <div class="card-body d-flex flex-column align-items-center justify-content-center">
@@ -78,13 +72,13 @@
                     </div>
                     <div class=" d-flex justify-content-center">
                     <div class="btn-group mx-2">
-                        <a href="{% url 'update_record' record.id %}" class="btn btn-secondary btn-sm">Edit</a>
+                        <a href="{% url 'update_record' record.id %}" class="btn btn-secondary ">Edit</a>
                         <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deletecurrentModal">
+                        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deletecurrentModal">
                           Delete
                         </button>
                     </div>
-                    <a href="{% url 'mark_complete' record.id %}" class="mx-2 btn btn-success btn-sm">Done</a>
+                    <a href="{% url 'mark_complete' record.id %}" class="mx-2 btn btn-success rounded-pill">Done</a>
                     </div>
             </div>
         </div>
@@ -92,16 +86,12 @@
               <div class="modal fade text-left" id="deletecurrentModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                   <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
-                      <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="exampleModalLabel">Confirm Delete</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                      </div>
                       <div class="modal-body">
-                        <p>Are you sure? it will delete <span class="text-primary">{{ record.topic }}, </span><span class="text-success">{{ record.subname }}</span></p>
+                        <h5>Want to delete? <span class="text-primary">{{ record.topic }}, </span><span class="text-success">{{ record.subname }}</span></h5>
                       </div>
                       <div class="modal-footer">
-                        <button type="button" class="btn btn-primary btn-sm" data-bs-dismiss="modal">No</button>
-                        <a href="{% url 'delete_record' record.id %}" class="btn btn-danger btn-sm">Yes, Delete it!</a>
+                        <button type="button" class="btn btn-success rounded-pill" data-bs-dismiss="modal">No</button>
+                        <a href="{% url 'delete_record' record.id %}" class="btn btn-danger rounded-pill">Yes, Delete it!</a>
                       </div>
                     </div>
                   </div>
@@ -124,8 +114,6 @@
     <div class="col-12 col-md-6 col-lg-6">
     {% endif %}
         <div class="mb-4">
-
-
             {% if queued_records %}
             <div class="card mb-2">
                 <div class="card-body d-flex flex-column align-items-center justify-content-center">
@@ -216,6 +204,10 @@
 
 
     {% else %}
+ <div class="card p-3 mb-2">
+  <p class="card-title text-center text-success h2">Study <span class="text-primary">Time Tracker</span></p>
+
+</div>
         <div class="col-md-6 offset-md-3">
             <h1>Login</h1>
             <br/>
@@ -297,6 +289,13 @@
             backdrop-filter: blur(10px);
             border: none;
             border-radius: 5px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+    .modal-content {
+            background: rgba(255, 255, 255, 0.4);
+            backdrop-filter: blur(10px);
+            border: none;
+            border-radius: 15px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
