Fix:Subject name while searching 'All'

--- a/main/templates/search_result.html
+++ b/main/templates/search_result.html
@@ -48,7 +48,7 @@
             <tr>
                 <th>#</th>
                 {% if subjectname|lower == 'all' %}
-                 <tH>Subject ec</tH>
+                 <th>Subject</th>
                 {% endif %}
                 <th>Topic</th> 
                 <th>Start Date</th>
