--- a/main/templates/progress.html
+++ b/main/templates/progress.html
@@ -256,7 +256,7 @@ new Chart(ctx3, {
           .card {
             background: rgba(255, 255, 255, 0.2);
             backdrop-filter: blur(10px);
-            border: none;
+            border-color: green;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
