--- a/main/templates/date_range_records.html
+++ b/main/templates/date_range_records.html
@@ -210,7 +210,7 @@
           .card {
             background: rgba(255, 255, 255, 0.2);
             backdrop-filter: blur(10px);
-            border: ;
+            border-color: green;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
