--- a/main/templates/search_result.html
+++ b/main/templates/search_result.html
@@ -110,7 +110,7 @@
           .card {
             background: rgba(255, 255, 255, 0.2);
             backdrop-filter: blur(10px);
-            border: none;
+            border-color: green;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
