--- a/main/templates/setting_page.html
+++ b/main/templates/setting_page.html
@@ -2,11 +2,8 @@
 {% block content %}
 
 <div class="col-md-6 offset-md-3">
-    <div class="card p-2 mb-3 d-flex justify-content-center align-items-center">
-    <h2 class="text-primary">Settings</h2>
-</div>
-
     <div class="card p-3 mb-2">
+    <h2>Settings</h2>
 
     <form method="POST">
         {% csrf_token %}
@@ -20,15 +17,7 @@
                 </div>
             </div>
         </div>
-         <div class="row mb-2">
-            <label for="target_date" class="col-sm-4 col-form-label">The Start Date:</label>
-            <div class="col-sm">
-                {{ form.thestart_date }}
-                <div class="invalid-feedback">
-                    Please select a valid date.
-                </div>
-            </div>
-        </div>
+
        <div class="row mb-2">
             <label for="target_date" class="col-sm-4 col-form-label">Target Date:</label>
             <div class="col-sm">
@@ -54,6 +43,16 @@
             <div class="col-sm">{{ form.max_queued }}
                 <div class="invalid-feedback">
                     Why you want to go beyond 10?.
+                </div>
+            </div>
+        </div>
+        <hr my-0>
+        <div class="row mb-2">
+            <label for="{{ form.wallpaper_number.id_for_label }}" class="col-sm-4 col-form-label">Wallpaper:</label>
+            <div class="col-sm">
+                {{ form.wallpaper_number}}
+                <div class="invalid-feedback">
+                    choose from
                 </div>
             </div>
         </div>
